# function-calling-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  call_agents.sh  main.py  pyproject.toml  requirements.txt
agents/: app.py  main.py  services.py
agents/config/: setting.py
agents/db/elasticsearch/: connector.py  operations.py
agents/functions/: calculator.py  search_engine.py
agents/interface/: gui.py
agents/service/: agent.py  pipeline.py  prompts.py  utils.py
function_calling_agents/config/: setting.py  yaml_loader.py
function_calling_agents/db/elasticsearch/: connector.py  operations.py
function_calling_agents/functions/: retrieval.py  search_engine.py
function_calling_agents/interface/: gui.py
function_calling_agents/service/: agent.py  pipeline.py  prompts.py
function_calling_agents/ui/: main.py
